create interface ConverterCollection and ConverterObjectWithoutQuotes